--- a/docs/shoes/shoes.css
+++ b/docs/shoes/shoes.css
@@ -61,7 +61,7 @@
             padding: 2rem;
             margin-bottom: 3rem;
             border: 1px solid rgba(255,255,255,0.2);
-            display: none important;
+            display: none !important;
         }
 
         .admin-title {
